# c3po

./: .coveragerc  .gitignore  .readthedocs.yaml  CTestTestfile.cmake  README.md  pyproject.toml  run_pytest.sh  run_tests.sh  setup.py
.github/workflows/: python-app.yml
doc/: .gitignore  Doxyfile.in  Doxyfile_version.in  Makefile  README.md  code_integration.dox  mainpage.dox  makedoc.sh  requirements.txt
doc/online/: conf.py  index.rst
doc/source/: code_integration.rst  conf.py  index.rst  mainpage.rst
sources/: .pylintrc  README.md  setup.py
sources/C3PO/: CollaborativeDataManager.py  CollaborativeExchanger.py  Coupler.py  DataManager.py  Exchanger.py  ListingWriter.py  NameChanger.py  PhysicsDriver.py  Tools.py  Tracer.py  __init__.py  collaborativeDataManager.py  collaborativeExchanger.py  coupler.py  dataManager.py  exchanger.py  listingWriter.py  medcoupling_compat.py  physicsDriver.py  tracer.py
sources/C3POMPI/: MPICollaborativeDataManager.py  MPICollectiveDataManager.py  MPICollectiveProcess.py  MPICoupler.py  MPIExchanger.py  MPIMasterCollectiveDataManager.py  MPIMasterCollectivePhysicsDriver.py  MPIMasterDataManager.py  MPIMasterExchanger.py  MPIMasterPhysicsDriver.py  MPIRecipient.py  MPIRemoteProcess.py  MPISender.py  MPITag.py  MPIWorker.py  __init__.py
sources/c3po/: CollaborativeDataManager.py  CollaborativeExchanger.py  CollaborativeObject.py  CollaborativePhysicsDriver.py  Coupler.py  DataAccessor.py  DataManager.py  Exchanger.py  NameChanger.py  (+8 more)
tests/: .gitignore  CTestTestfile.cmake  README.md  __init__.py  medBuilder.py  runMPITest.py
(+223 files in other folders)
