[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "salome-c3po"
dynamic = ["version"]
description = "Collaborative Code Coupling PlatfOrm"
readme = { file = "sources/README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
authors = [
  { name = "CEA", email = "cyril.patricot@cea.fr" }
]
maintainers = [
  { name = "Cyril Patricot", email = "cyril.patricot@cea.fr" }
]
license = { text = "3-Clause BSD" }
dependencies = [
  "numpy>=1.9",
  "icoco>=2.0.3"
]

[project.optional-dependencies]
pytest = [
  "pytest",
  "pytest-cov",
  "pytest-html"
]

doc = [
  "graphviz",
  "sphinx>=8.2.0",
  "sphinx-rtd-theme"
]

mpi = [
  "mpi4py>=1.3"
]

[project.urls]
Homepage = "https://github.com/code-coupling/c3po"

[tool.setuptools]
package-dir = {"" = "sources"}

[tool.setuptools.dynamic]
version = { file = "sources/c3po/VERSION" }

[tool.setuptools.packages.find]
where = ["sources"]

[tool.setuptools.package-data]
c3po = ["VERSION"]
